# pgagroal

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  _config.yml  about.html  clang-format.sh  configuration.html  failover.html  gettingstarted.html  index.html  metrics.html  news.html  performance.html  pgagroal.spec  pipelines.html  releases.html  security.html  uncrustify.cfg  uncrustify.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/config/: pg_hba.conf
.github/workflows/: ci.yml
_data/: releases.yml
_layouts/: default.html  post.html
_posts/: 2019-09-17-pgagroal-0.1.0.md  2019-09-19-pgagroal-0.1.1.md  2019-09-24-pgagroal-0.2.0.md  2019-10-08-pgagroal-0.3.0.md  2020-01-07-pgagroal-0.4.0.md  2020-01-14-performance-rhel-7.7.md  2020-03-17-pgagroal-0.5.0.md  2020-04-14-pgagroal-0.5.1.md  2020-04-28-pgagroal-0.6.0.md  2020-05-26-pgagroal-0.7.0.md  2020-06-09-pgagroal-0.7.1.md  2020-06-30-pgagroal-0.7.2.md  2020-07-28-pgagroal-0.7.3.md  2020-08-04-pgagroal-0.8.0.md  2020-08-25-pgagroal-0.8.1.md  2020-09-01-pgagroal-0.8.2.md  2020-09-22-pgagroal-0.9.0.md  2020-10-13-pgagroal-0.9.1.md  2020-11-10-pgagroal-0.9.2.md  2020-11-24-pgagroal-1.0.0.md  2020-12-01-pgagroal-1.0.1.md  2020-12-22-pgagroal-1.0.2.md  2021-01-05-pgagroal-1.1.0.md  2021-02-23-pgagroal-1.2.0.md  2021-03-23-pgagroal-1.2.1.md  2021-06-29-pgagroal-1.2.2.md  2021-09-07-pgagroal-1.3.0.md  2021-10-05-pgagroal-1.3.1.md  2021-10-19-pgagroal-1.3.2.md  2021-11-09-pgagroal-1.3.3.md  2022-01-11-pgagroal-1.4.0.md  2022-03-15-pgagroal-1.4.1.md  2022-04-24-pgagroal-1.4.2.md  2022-08-30-pgagroal-1.5.0.md  2023-01-10-pgagroal-1.5.1.md  2024-02-22-pgagroal-1.6.0.md
cmake/: FindCheck.cmake  FindLibatomic.cmake  FindLiburing.cmake  FindLz4.cmake  FindPandoc.cmake  FindPdflatex.cmake  FindRst2man.cmake  FindSystemd.cmake  FindTHREAD.cmake  FindZstd.cmake  FindcJSON.cmake
contrib/docker/: Dockerfile.alpine  Dockerfile.rocky9  pgagroal.conf  pgagroal_hba.conf
contrib/grafana/: GETTING_DATA.md  README.md  TESTING.md  dashboard.json  docker-compose.yml  pgagroal-overview.json  pgagroal-performance.json  pgagroal-pool-details.json  prometheus.yml
css/: main.css
doc/: ADMIN.md  ARCHITECTURE.md  CLI.md  CMakeLists.txt  CONFIGURATION.md  DEVELOPERS.md  DISTRIBUTIONS.md  FAILOVER.md  GETTING_STARTED.md  PERFORMANCE.md  PIPELINES.md  RPM.md  SECURITY.md  TEST.md  VAULT.md
doc/etc/: pgagroal.conf  pgagroal.service  pgagroal.socket  pgagroal_hba.conf  pgagroal_vault.conf
doc/internals/: 01_directory_structure.md
doc/man/: pgagroal-admin.1.rst  pgagroal-cli.1.rst  pgagroal-vault.1.rst  pgagroal.1.rst  pgagroal.conf.5.rst  pgagroal_databases.conf.5.rst  pgagroal_hba.conf.5.rst  pgagroal_vault.conf.5.rst
doc/manual/: 01-introduction.md  02-installation.md  97-acknowledgement.md  98-acknowledgement.md  98-licenses.md  99-references.md  dev-00-head.md  dev-01-git.md  dev-02-architecture.md  dev-03-rpm.md  dev-04-building.md  dev-05-codecoverage.md  dev-06-eventloop.md  dev-07-core_api.md  dev-08-cli-test-suite.md  user-00-head.md  user-01-quickstart.md  user-02-configuration.md  user-04-tutorials.md  user-10-cli.md  user-11-prometheus.md  user-12-vault.md
doc/manual/advanced/: 00-frontpage.md  01-preface.md  03-installation.md  04-configuration.md  05-prefill.md  06-remote_management.md  07-split_security.md  08-tls.md  09-database_alias.md  10-prometheus.md  10-vault.md  11-docker.md  12-database_alias.md  12-docker.md  97-acknowledgement.md  99-references.md  dev-07-core_api.md
doc/manual/en/: 00-frontpage.md  01-introduction.md  02-installation.md  03-gettingstarted.md  04-configuration.md  05-prefill.md  06-remote_management.md  07-split_security.md  08-tls.md  09-database_alias.md  10-vault.md  11-prometheus.md  12-docker.md  13-cli-tools.md  14-performance.md  15-failover.md  16-pipelines.md  17-security.md  70-dev.md  71-git.md  72-architecture.md  73-rpm.md  74-building.md  75-codecoverage.md  76-eventloop.md  77-core_api.md  78-test.md  79-distributions.md  97-acknowledgement.md  99-references.md
doc/tutorial/: 01_install.md  02_prefill.md  03_remote_management.md  04_prometheus.md  05_split_security.md  06_tls.md  06_vault.md  07_vault.md  08_docker.md  08_tls_enforced.md  09_test.md  09_testsuite.md
src/: CMakeLists.txt  admin.c  bidi.c  cli.c  compile_commands.json  main.c  vault.c
src/include/: aes.h  art.h  bzip2_compression.h  configuration.h  connection.h  deque.h  ev.h  gzip_compression.h  json.h  logging.h  lz4_compression.h  management.h  memory.h  message.h  network.h  pgagroal.h  pipeline.h  pool.h  prometheus.h  query_cache.h  remote.h  security.h  server.h  shmem.h  status.h  tracker.h  utf8.h  utils.h  value.h  worker.h  zstandard_compression.h
src/libpgagroal/: aes.c  art.c  bzip2_compression.c  configuration.c  connection.c  deque.c  ev.c  gzip_compression.c  json.c  logging.c  lz4_compression.c  management.c  memory.c  message.c  network.c  pipeline_perf.c  pipeline_session.c  pipeline_transaction.c  pool.c  prometheus.c  query_cache.c  remote.c  security.c  server.c  shmem.c  status.c  tracker.c  utf8.c  utils.c  value.c  worker.c  zf_log.c  zstandard_compression.c
test/: CMakeLists.txt  Dockerfile.testsuite  check.sh  coverage.sh  runner.c  test_cli_comprehensive.sh  testsuite.sh  tsclient.c
test/conf/01/: pgagroal.conf
test/conf/02/: pgagroal.conf
test/conf/03/: pgagroal.conf
test/conf/04/: pgagroal_hba.conf
test/conf/05/: pgagroal.conf
test/conf/06/: pgagroal.conf  pgagroal_hba.conf
test/include/: tsclient.h  tscommon.h  tssuite.h
test/libpgagroaltest/: tsclient.c  tscommon.c
test/postgresql/src/postgresql17/: Dockerfile  Makefile  README.md
test/postgresql/src/postgresql17/conf/: pg_hba.conf  postgresql.conf  setup.sql
test/testcases/: pgagroal_test_1.c  pgagroal_test_1.h  pgagroal_test_2.c  pgagroal_test_2.h  test_alias.c  test_art.c  test_connection.c  test_deque.c  test_json.c  test_utf8.c
tests/: README.md  config.sh  run  signals.sh  utils.sh
(+20 files in other folders)
